# clawcode2

./: MINIMAX_DEEPSEEK_SUPPORT.md
rust/.claw/sessions/1b31b32322057a39/: session-1776154783744-0.jsonl  session-1776154798091-0.jsonl  session-1776154839559-0.jsonl  session-1776154856055-0.jsonl  session-1776154863153-0.jsonl  session-1776154962360-0.jsonl  session-1776154993711-0.jsonl  session-1776155051241-0.jsonl  session-1776155655948-0.jsonl  session-1776300958574-0.jsonl  session-1776301131987-0.jsonl  session-1776301143307-0.jsonl  session-1776301799615-0.jsonl  session-1776301868825-0.jsonl  session-1776301942858-0.jsonl  session-1776302037295-0.jsonl  session-1776302174738-0.jsonl  session-1776303110414-0.jsonl  session-1776303176441-0.jsonl  session-1776303276667-0.jsonl  session-1776303303135-0.jsonl  session-1776304685127-0.jsonl  session-1776305018327-0.jsonl  session-1776305041602-0.jsonl  session-1776305061275-0.jsonl  session-1776305088768-0.jsonl  session-1776305199223-0.jsonl
rust/.sandbox-home/.cargo/: .global-cache
rust/crates/api/src/: client.rs  types.rs
rust/crates/api/src/providers/: mod.rs  openai_compat.rs
rust/crates/commands/src/: lib.rs
rust/crates/desktop/: Cargo.toml
rust/crates/desktop/examples/: test_desktop.rs
rust/crates/desktop/src/: lib.rs
rust/crates/desktop/static/: app.js  style.css
rust/crates/runtime/src/: autonomous.rs  lib.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/tools/src/: lib.rs
(+34 files in other folders)
