[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[[example]]
name = "test_desktop"
path = "examples/test_desktop.rs"

[dependencies]
tiny_http = "0.12"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
notify = "6.1"
